--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+
+
+
+   <header>
+    <nav class="navbar">
+        <h1 class="logo">Leester</h1>
+    </nav>
+   </header>
     
 </body>
 </html>
